force-app/main/default/objects/BalanceSheet__c/BalanceSheet__c.object-meta.xml
<CustomObject>
    <label>B/S</label>
    <nameField>
        <displayFormat>BS-{000000}</displayFormat>
        <label>B/S ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B/S</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>