force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeCapital__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeCapital__c</fullName>
    <defaultValue>&quot;410&quot;</defaultValue>
    <label>ACCOUNT CODE-Capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>