force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeCapitals__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeCapitals__c</fullName>
    <defaultValue>&quot;400&quot;</defaultValue>
    <label>ACCOUNT CODE-CAPITALS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>