force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeCAS1__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeCAS1__c</fullName>
    <defaultValue>&quot;151&quot;</defaultValue>
    <label>ACCOUNT CODE-CAS-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>