force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeCAS2__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeCAS2__c</fullName>
    <defaultValue>&quot;152&quot;</defaultValue>
    <label>ACCOUNT CODE-CAS-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>