force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeCAS4__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeCAS4__c</fullName>
    <label>ACCOUNT CODE-CAS-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>