force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeCashEqu__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeCashEqu__c</fullName>
    <defaultValue>&quot;110&quot;</defaultValue>
    <label>ACCOUNT CODE-Cash and Cash Equivalent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>