force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeCPT2__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeCPT2__c</fullName>
    <label>ACCOUNT CODE-CPT-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>