force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeFAS1__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeFAS1__c</fullName>
    <defaultValue>&quot;221&quot;</defaultValue>
    <label>ACCOUNT CODE-FAS-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>