force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeFixedLongInv__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeFixedLongInv__c</fullName>
    <defaultValue>&quot;200&quot;</defaultValue>
    <label>ACCOUNT CODE-FIXED ASSET &amp; LONG-TERM INV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>