force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeIRE1__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeIRE1__c</fullName>
    <defaultValue>&quot;231&quot;</defaultValue>
    <label>ACCOUNT CODE-IRE-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>