force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeIVT1__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeIVT1__c</fullName>
    <defaultValue>&quot;141&quot;</defaultValue>
    <label>ACCOUNT CODE-IVT-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>