force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeLongAssetPro__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeLongAssetPro__c</fullName>
    <defaultValue>&quot;240&quot;</defaultValue>
    <label>ACCOUNT CODE-Long-term Asset in Progr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>