force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeLongReceivable__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeLongReceivable__c</fullName>
    <defaultValue>&quot;210&quot;</defaultValue>
    <label>ACCOUNT CODE-Long-term Receivables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>