force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeLTL2__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeLTL2__c</fullName>
    <label>ACCOUNT CODE-LTL-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>