force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeLTR2__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeLTR2__c</fullName>
    <defaultValue>&quot;212&quot;</defaultValue>
    <label>ACCOUNT CODE-LTR-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>