force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeLTR3__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeLTR3__c</fullName>
    <defaultValue>&quot;213&quot;</defaultValue>
    <label>ACCOUNT CODE-LTR-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>