force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeLTR4__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeLTR4__c</fullName>
    <defaultValue>&quot;214&quot;</defaultValue>
    <label>ACCOUNT CODE-LTR-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>