force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeOSF1__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeOSF1__c</fullName>
    <label>ACCOUNT CODE-OSF-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>