force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeOtherSource__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeOtherSource__c</fullName>
    <defaultValue>&quot;430&quot;</defaultValue>
    <label>ACCOUNT CODE-Other Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>