force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeShortInv__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeShortInv__c</fullName>
    <defaultValue>&quot;120&quot;</defaultValue>
    <label>ACCOUNT CODE-Short-term investments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>