force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeShortLiability__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeShortLiability__c</fullName>
    <defaultValue>&quot;310&quot;</defaultValue>
    <label>ACCOUNT CODE-Short-term Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>