force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeShortRec__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeShortRec__c</fullName>
    <defaultValue>&quot;130&quot;</defaultValue>
    <label>ACCOUNT CODE-Short-term Receivables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>