force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeSIT2__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeSIT2__c</fullName>
    <defaultValue>&quot;122&quot;</defaultValue>
    <label>ACCOUNT CODE-STI-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>