force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeSTL2__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeSTL2__c</fullName>
    <defaultValue>&quot;312&quot;</defaultValue>
    <label>ACCOUNT CODE-STL-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>