force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeSTR2__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeSTR2__c</fullName>
    <defaultValue>&quot;132&quot;</defaultValue>
    <label>ACCOUNT CODE-STR-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>