force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeSTR5__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeSTR5__c</fullName>
    <label>ACCOUNT CODE-STR-5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>