force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeSTR7__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeSTR7__c</fullName>
    <label>ACCOUNT CODE-STR-7</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>