force-app/main/default/objects/BalanceSheet__c/fields/AccountCodeTotalLiabilityEqu__c.field-meta.xml
<CustomField>
    <fullName>AccountCodeTotalLiabilityEqu__c</fullName>
    <defaultValue>&quot;440&quot;</defaultValue>
    <label>ACCOUNT CODE-TOTAL LIABILITY&amp;EQUITY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingCode</valueSetName>
    </valueSet>
</CustomField>