force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCapital__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCapital__c</fullName>
    <defaultValue>&quot;I.Capital&quot;</defaultValue>
    <label>ACCOUNT NAME-Capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>