force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCapitals__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCapitals__c</fullName>
    <defaultValue>&quot;B.RESOURCE-CAPITAL&quot;</defaultValue>
    <label>ACCOUNT NAME-CAPITALS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>