force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCAS1__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCAS1__c</fullName>
    <defaultValue>&quot;Short-term prepaid expenses&quot;</defaultValue>
    <label>ACCOUNT NAME-CAS-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>