force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCAS3__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCAS3__c</fullName>
    <defaultValue>&quot;Government bonds purchased for resale as Investment&quot;</defaultValue>
    <label>ACCOUNT NAME-CAS-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>