force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCAS4__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCAS4__c</fullName>
    <label>ACCOUNT NAME-CAS-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>