force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCCE1__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCCE1__c</fullName>
    <defaultValue>&quot;Cash&quot;</defaultValue>
    <label>ACCOUNT NAME-CCE-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>