force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCCE2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCCE2__c</fullName>
    <defaultValue>&quot;Cash equivalent&quot;</defaultValue>
    <label>ACCOUNT NAME-CCE-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>