force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCPT2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCPT2__c</fullName>
    <label>ACCOUNT NAME-CPT-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>