force-app/main/default/objects/BalanceSheet__c/fields/AccountNameCurrentAsset__c.field-meta.xml
<CustomField>
    <fullName>AccountNameCurrentAsset__c</fullName>
    <defaultValue>&quot;V.Current assets&quot;</defaultValue>
    <label>ACCOUNT NAME-Current Assets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>