force-app/main/default/objects/BalanceSheet__c/fields/AccountNameFAS3__c.field-meta.xml
<CustomField>
    <fullName>AccountNameFAS3__c</fullName>
    <label>ACCOUNT NAME-FAS-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>