force-app/main/default/objects/BalanceSheet__c/fields/AccountNameIRE2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameIRE2__c</fullName>
    <label>ACCOUNT NAME-IRE-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>