force-app/main/default/objects/BalanceSheet__c/fields/AccountNameLFI2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLFI2__c</fullName>
    <label>ACCOUNT NAME-LFI-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>