force-app/main/default/objects/BalanceSheet__c/fields/AccountNameLongAssetPro__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLongAssetPro__c</fullName>
    <defaultValue>&quot;IV.Long-term asset in progress&quot;</defaultValue>
    <label>ACCOUNT NAME-Long-term asset in Progr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>