force-app/main/default/objects/BalanceSheet__c/fields/AccountNameLongLiability__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLongLiability__c</fullName>
    <defaultValue>&quot;II.Long-term liability&quot;</defaultValue>
    <label>ACCOUNT NAME-Long-term Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>