force-app/main/default/objects/BalanceSheet__c/fields/AccountNameLTL2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLTL2__c</fullName>
    <label>ACCOUNT NAME-LTL-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>