force-app/main/default/objects/BalanceSheet__c/fields/AccountNameLTR2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLTR2__c</fullName>
    <defaultValue>&quot;Long-term prepaid to supplier&quot;</defaultValue>
    <label>ACCOUNT NAME-LTR-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>