force-app/main/default/objects/BalanceSheet__c/fields/AccountNameLTR3__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLTR3__c</fullName>
    <defaultValue>&quot;Investment in equity of subsidiaries&quot;</defaultValue>
    <label>ACCOUNT NAME-LTR-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>