force-app/main/default/objects/BalanceSheet__c/fields/AccountNameLTR5__c.field-meta.xml
<CustomField>
    <fullName>AccountNameLTR5__c</fullName>
    <defaultValue>&quot;Long-term lending receivables&quot;</defaultValue>
    <label>ACCOUNT NAME-LTR-5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>