force-app/main/default/objects/BalanceSheet__c/fields/AccountNameOLA1__c.field-meta.xml
<CustomField>
    <fullName>AccountNameOLA1__c</fullName>
    <label>ACCOUNT NAME-OLA-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>