force-app/main/default/objects/BalanceSheet__c/fields/AccountNameOSF1__c.field-meta.xml
<CustomField>
    <fullName>AccountNameOSF1__c</fullName>
    <label>ACCOUNT NAME-OSF-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>