force-app/main/default/objects/BalanceSheet__c/fields/AccountNameOtherSource__c.field-meta.xml
<CustomField>
    <fullName>AccountNameOtherSource__c</fullName>
    <defaultValue>&quot;II.Other sources and funds&quot;</defaultValue>
    <label>ACCOUNT NAME-Other Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>