force-app/main/default/objects/BalanceSheet__c/fields/AccountNameShortInv__c.field-meta.xml
<CustomField>
    <fullName>AccountNameShortInv__c</fullName>
    <defaultValue>&quot;II.Short-term investments&quot;</defaultValue>
    <label>ACCOUNT NAME-Short-term investments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>