force-app/main/default/objects/BalanceSheet__c/fields/AccountNameShortLiability__c.field-meta.xml
<CustomField>
    <fullName>AccountNameShortLiability__c</fullName>
    <defaultValue>&quot;I.Short-term liability&quot;</defaultValue>
    <label>ACCOUNT NAME-Short-term Liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>