force-app/main/default/objects/BalanceSheet__c/fields/AccountNameSTI3__c.field-meta.xml
<CustomField>
    <fullName>AccountNameSTI3__c</fullName>
    <defaultValue>&quot;Other short-term investment&quot;</defaultValue>
    <label>ACCOUNT NAME-STI-3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>