force-app/main/default/objects/BalanceSheet__c/fields/AccountNameSTL1__c.field-meta.xml
<CustomField>
    <fullName>AccountNameSTL1__c</fullName>
    <defaultValue>&quot;Short-term payable to supplier&quot;</defaultValue>
    <label>ACCOUNT NAME-STL-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>