force-app/main/default/objects/BalanceSheet__c/fields/AccountNameSTL2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameSTL2__c</fullName>
    <defaultValue>&quot;Short-term advances from customers&quot;</defaultValue>
    <label>ACCOUNT NAME-STL-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>