force-app/main/default/objects/BalanceSheet__c/fields/AccountNameSTR1__c.field-meta.xml
<CustomField>
    <fullName>AccountNameSTR1__c</fullName>
    <defaultValue>&quot;Trade receivables&quot;</defaultValue>
    <label>ACCOUNT NAME-STR-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>