force-app/main/default/objects/BalanceSheet__c/fields/AccountNameSTR2__c.field-meta.xml
<CustomField>
    <fullName>AccountNameSTR2__c</fullName>
    <defaultValue>&quot;Advance to suppliers&quot;</defaultValue>
    <label>ACCOUNT NAME-STR-2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>