force-app/main/default/objects/BalanceSheet__c/fields/AccountNameTotalAsset__c.field-meta.xml
<CustomField>
    <fullName>AccountNameTotalAsset__c</fullName>
    <defaultValue>&quot;TOTAL ASSET&quot;</defaultValue>
    <label>ACCOUNT NAME-TOTAL ASSET</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>