force-app/main/default/objects/BalanceSheet__c/fields/AccountNameTotalLiabilityEqu__c.field-meta.xml
<CustomField>
    <fullName>AccountNameTotalLiabilityEqu__c</fullName>
    <defaultValue>&quot;TOTAL LIABILITIES AND OWNERS&apos; EQUITY&quot;</defaultValue>
    <label>ACCOUNT NAME-TOTAL LIABILITY&amp;EQUITY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingName</valueSetName>
    </valueSet>
</CustomField>