force-app/main/default/objects/BalanceSheet__c/fields/BSName__c.field-meta.xml
<CustomField>
    <fullName>BSName__c</fullName>
    <label>B/S NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>