force-app/main/default/objects/BalanceSheet__c/fields/ChiefAccountant__c.field-meta.xml
<CustomField>
    <fullName>ChiefAccountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHIEF ACCOUNTANT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BSChiefAccoutant</relationshipName>
    <type>Lookup</type>
</CustomField>