force-app/main/default/objects/BalanceSheet__c/fields/CloseBalCapital__c.field-meta.xml
<CustomField>
    <fullName>CloseBalCapital__c</fullName>
    <label>CLOSING BALANCE-Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>