force-app/main/default/objects/BalanceSheet__c/fields/CloseBalCashEqu__c.field-meta.xml
<CustomField>
    <fullName>CloseBalCashEqu__c</fullName>
    <label>CLOSING BALANCE-Cash and cash equivalent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>