force-app/main/default/objects/BalanceSheet__c/fields/CloseBalCurrentAssets__c.field-meta.xml
<CustomField>
    <fullName>CloseBalCurrentAssets__c</fullName>
    <label>CLOSING BALANCE-CURRENT ASSETS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>