force-app/main/default/objects/BalanceSheet__c/fields/CloseBalFixedAsset__c.field-meta.xml
<CustomField>
    <fullName>CloseBalFixedAsset__c</fullName>
    <label>CLOSING BALANCE-Fixed Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>