force-app/main/default/objects/BalanceSheet__c/fields/CloseBalFixedLongInv__c.field-meta.xml
<CustomField>
    <fullName>CloseBalFixedLongInv__c</fullName>
    <label>CLOSING BALANCE-FIXED ASSET &amp; L-TERM INV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>