force-app/main/default/objects/BalanceSheet__c/fields/CloseBalInventories__c.field-meta.xml
<CustomField>
    <fullName>CloseBalInventories__c</fullName>
    <label>CLOSING BALANCE-Inventories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>