force-app/main/default/objects/BalanceSheet__c/fields/CloseBalLongAssetPro__c.field-meta.xml
<CustomField>
    <fullName>CloseBalLongAssetPro__c</fullName>
    <label>CLOSING BALANCE-Long-term asset in Progr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>