force-app/main/default/objects/BalanceSheet__c/fields/CloseBalLongFinInv__c.field-meta.xml
<CustomField>
    <fullName>CloseBalLongFinInv__c</fullName>
    <label>CLOSING BALANCE-Long-term Financial Inv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>