force-app/main/default/objects/BalanceSheet__c/fields/CloseBalLongReceivable__c.field-meta.xml
<CustomField>
    <fullName>CloseBalLongReceivable__c</fullName>
    <label>CLOSING BALANCE-Long-term Receivables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>