force-app/main/default/objects/BalanceSheet__c/fields/CloseBalOtherSource__c.field-meta.xml
<CustomField>
    <fullName>CloseBalOtherSource__c</fullName>
    <label>CLOSING BALANCE-Other Source</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>