force-app/main/default/objects/BalanceSheet__c/fields/CloseBalRealEst__c.field-meta.xml
<CustomField>
    <fullName>CloseBalRealEst__c</fullName>
    <label>CLOSING BALANCE-Investment Real Estate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>