force-app/main/default/objects/BalanceSheet__c/fields/CloseBalShortInv__c.field-meta.xml
<CustomField>
    <fullName>CloseBalShortInv__c</fullName>
    <label>CLOSING BALANCE-Short-term investments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>