force-app/main/default/objects/BalanceSheet__c/fields/CloseBalShortLiability__c.field-meta.xml
<CustomField>
    <fullName>CloseBalShortLiability__c</fullName>
    <label>CLOSING BALANCE-Short-term Liability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>