force-app/main/default/objects/BalanceSheet__c/fields/CloseBalShortRec__c.field-meta.xml
<CustomField>
    <fullName>CloseBalShortRec__c</fullName>
    <label>CLOSING BALANCE-Short-term Receivables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>