force-app/main/default/objects/BalanceSheet__c/fields/CloseBalTotalAsset__c.field-meta.xml
<CustomField>
    <fullName>CloseBalTotalAsset__c</fullName>
    <label>CLOSING BALANCE-TOTAL ASSET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>