force-app/main/default/objects/BalanceSheet__c/fields/CloseBalTotalLiabilityEqu__c.field-meta.xml
<CustomField>
    <fullName>CloseBalTotalLiabilityEqu__c</fullName>
    <label>CLOSING BALANCE-TOTAL LIABILITY&amp;EQUITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>