force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceCAS3__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceCAS3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-CAS-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>