force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceCCE1__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceCCE1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-CCE-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>