force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceCCE2__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceCCE2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-CCE-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>