force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceFAS3__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceFAS3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-FAS-3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>