force-app/main/default/objects/BalanceSheet__c/fields/ClosingBalanceLAP1__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceLAP1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CLOSING BALANCE-LAP-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>